updating out details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Zayad Khan, I am 22 years old, currently working at The Home Depot and I'm very excited to learn duing the bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Houston,TX</p>
+      <h1>What are your favotite hobbies?</h1>
+      <p>Somethings that I enjoy doing on my free time are playing sports (Volleyball, Tennis and Basketball), breakdancing, or playing video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To work for a company that I can make a comfortable earning while being happy to work everyday.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Somerset, NJ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web devolper because it not only feeds my curiosity of what goes behinds the curtains but also gives me the tools to be able to help my mother start up her buisness.  </p>
     </section>
 
     <footer id="footer">
